Fix installer with updated mbr location #208

--- a/etc/systemd/system/upgrade.service
+++ b/etc/systemd/system/upgrade.service
@@ -1,1 +1,10 @@
-/lib/systemd/system/upgrade.service
+[Unit]
+Description=Upgrade Webconverger
+
+[Service]
+Type=simple
+ExecStart=/etc/webc/logbot.sh /etc/webc/upgrade.sh
+Restart=always
+
+[Install]
+WantedBy=multi-user.target
