--- a/etc/systemd/system/startx.service
+++ b/etc/systemd/system/startx.service
@@ -1,1 +1,9 @@
-/lib/systemd/system/startx.service
+[Unit]
+Description=Manages X and replaces getty
+
+[Service]
+ExecStart=/etc/webc/startx.sh
+Restart=always
+
+[Install]
+WantedBy=multi-user.target
