Put /var/cache/cups/ in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ var/cache/fontconfig/
 var/cache/ldconfig/
 var/cache/dictionaries-common
 var/cache/apt/
+var/cache/cups/
 var/cache/debconf/*-old
 var/tmp
 usr/share/locale
