cmdline has some %20 encoded options which were being escaped to space and being interpreted as another firefox tab we don't really use the passed cmdline arguments, so removing them

--- a/etc/webc/webc.conf
+++ b/etc/webc/webc.conf
@@ -15,7 +15,7 @@ prefs=/opt/firefox/browser/defaults/preferences/webc-boot.js
 link='/opt/firefox/browser/extensions/kiosk@webconverger.com'
 
 install_base_url="https://config.webconverger.com/clients"
-install_qa_url="${install_base_url}/?v=${webc_version}&id=${webc_id}&$(cmdline | /usr/bin/tr -s '[:space:]' '&')"
+install_qa_url="${install_base_url}/?v=${webc_version}&id=${webc_id}&chrome=$(cmdline_get chrome)"
 config_url="${install_base_url}/install-config/${webc_id}"
 
 # triggers live-config.sh - this gets config from config.webconverger.com
