--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+binary.img
+binary.iso
+bizplay-*.img
+bizplay-*.iso
 root/.bash_history
 /home/webc/.bash_history
 root/.aptitude
@@ -31,6 +35,7 @@ proc
 usr/include
 sys
 dev
+dev.tmp
 run
 etc/ld.so.cache
 *.swp
