--- a/etc/webc/webc.conf
+++ b/etc/webc/webc.conf
@@ -16,7 +16,7 @@ link='/opt/firefox/browser/extensions/kiosk@webconverger.com'
 
 install_base_url="https://config.webconverger.com/clients"
 install_qa_url="${install_base_url}/?v=${webc_version}&id=${webc_id}&chrome=$(cmdline_get chrome)"
-config_url="${install_base_url}/install-config/${webc_id}"
+config_url="http://www.playr.biz/web_kiosk_config/?player_id=${webc_id}"
 
 # triggers live-config.sh - this gets config from config.webconverger.com
 live_config_pipe="/tmp/live-config.pipe" # needs to be writable by xinitrc
